<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_white"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/dlg_imgload_title"
            android:background="@color/color_ededed"
            android:textColor="@color/color_666666"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="22dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_imgload_explanation01"
                android:textColor="@color/color_666666"
                android:textSize="11dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_imgload_explanation02"
                android:textColor="@color/color_666666"
                android:textSize="11dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="43dp"
            android:background="@drawable/wt_b_button"
            android:gravity="center"
            android:paddingRight="2dp"
            android:text="@string/dlg_imgload_btn01"
            android:textColor="@color/color_white"
            android:textSize="14dp" />


        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="43dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/wt_b_button"
            android:gravity="center"
            android:paddingRight="2dp"
            android:text="@string/dlg_imgload_btn02"
            android:textColor="@color/color_white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="43dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/wt_g_s_button"
            android:gravity="center"
            android:paddingRight="2dp"
            android:text="@string/dlg_imgload_btn03"
            android:textColor="@color/color_white"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>