<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/color_28a7e1"
            android:paddingLeft="@dimen/toolbar_padding_left"
            android:paddingRight="@dimen/toolbar_padding_right"
            android:theme="@style/ToolbarTheme"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ToolbarTheme">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/act_permission_title"
                android:textColor="@color/color_white"
                android:textSize="19dp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_f5f5f5"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_permission_notice01"
                android:textColor="@color/color_444444"
                android:textSize="17dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_permission_notice02"
                    android:textColor="@color/color_444444"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_permission_notice03"
                    android:textColor="@color/color_bd3a30"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_permission_notice04"
                    android:textColor="@color/color_444444"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/sh_rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/color_29a7e1"
                android:gravity="center"
                android:text="@string/act_permission_contents_title"
                android:textColor="@color/color_white"
                android:textSize="19dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/color_d3d3d3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_permission_contents_sub_title01"
                    android:textColor="@color/color_444444"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="·"
                    android:textColor="@color/color_888888"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:breakStrategy="high_quality"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="3dp"
                    android:text="@string/act_permission_contents_sub_explanation01"
                    android:textColor="@color/color_888888"
                    android:textSize="15dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/color_d3d3d3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_permission_contents_sub_title02"
                    android:textColor="@color/color_444444"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="·"
                    android:textColor="@color/color_888888"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:breakStrategy="high_quality"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="3dp"
                    android:text="@string/act_permission_contents_sub_explanation02"
                    android:textColor="@color/color_888888"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_private"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/wt_sw_button"
            android:gravity="center"
            android:text="@string/act_permission_contents_btn01"
            android:textColor="@color/color_29a7e1"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/wt_b_button"
            android:gravity="center"
            android:text="@string/act_permission_contents_btn02"
            android:textColor="@color/color_white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>