<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="23dp"
            android:paddingTop="23dp"
            android:paddingRight="23dp">


            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/wt_inpbox_191022"
                android:hint="@string/frag_find02_pw"
                android:inputType="textPassword"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:singleLine="true"
                android:textColor="@color/color_444444"
                android:textColorHint="@color/color_aaaaaa"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/et_pw_confirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/wt_inpbox_191022"
                android:hint="@string/frag_find02_pw_confirm"
                android:inputType="textPassword"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:singleLine="true"
                android:textColor="@color/color_444444"
                android:textColorHint="@color/color_aaaaaa"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/frag_join02_explanation"
                android:textColor="@color/color_666666"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@drawable/wt_btn360_disable_191022"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/color_white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>